# greenlight

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  sdkconfig.board-cyd_28_2432s028r.defaults  sdkconfig.board-ipistbit_32_st7789.defaults  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.docs-screenshots.defaults
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-ota.yml  validation.yml
certs/: github-ota-root-bundle.pem
docs/: getting-started.md  ota-metadata.sample.json
main/: CMakeLists.txt  Kconfig.projbuild  app_settings.c  app_settings.h  app_state.c  app_state.h  board_profile.c  board_profile.h  docs_screenshot.c  docs_screenshot.h  hardware.h  idf_component.yml  lcd.c  lcd.h  lv_font_montserrat_20_numeric.c  lv_font_montserrat_28_numeric.c  main.c  numeric_fonts.h  octopus_client.c  octopus_client.h  octopus_client_internal.c  octopus_client_internal.h  ota_manager.c  ota_manager.h  ota_manager_internal.c  ota_manager_internal.h  splash_logo.c  splash_logo.h  sync_controller.c  sync_controller.h  sync_controller_internal.h  tariff_model.c  tariff_model.h  time_manager.c  time_manager.h  touch.c  touch.h  ui_detail.c  ui_primary.c  ui_router.c  (+5 more)
tools/: capture_doc_screenshots.py  generate_assets.py  generate_lvgl_logo.py  generate_release_metadata.py  repro_octopus_products.c  run_host_tests.sh  run_octopus_products_repro.sh  test_octopus_client.c  test_ota_manager_internal.c  test_sync_controller_refresh.c  validate.sh
tools/host_stubs/: esp_check.h  esp_crt_bundle.h  esp_err.h  esp_http_client.h  esp_log.h  host_test_compat.h
tools/host_stubs/freertos/: FreeRTOS.h  task.h
