idf_component_register(
    SRCS
        "app_settings.c"
        "app_state.c"
        "lcd.c"
        "main.c"
        "octopus_client.c"
        "sync_controller.c"
        "tariff_model.c"
        "time_manager.c"
        "touch.c"
        "ui_router.c"
        "wifi_manager.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_event
        esp_netif
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_spi
        esp_http_client
        esp_wifi
        freertos
        lwip
        mbedtls
        nvs_flash
)
