idf_component_register(
    SRCS
        "app_settings.c"
        "app_state.c"
        "docs_screenshot.c"
        "lcd.c"
        "lv_font_montserrat_20_numeric.c"
        "lv_font_montserrat_28_numeric.c"
        "main.c"
        "octopus_client.c"
        "octopus_client_internal.c"
        "ota_manager.c"
        "ota_manager_internal.c"
        "splash_logo.c"
        "sync_controller.c"
        "tariff_model.c"
        "time_manager.c"
        "touch.c"
        "ui_detail.c"
        "ui_primary.c"
        "ui_router.c"
        "ui_settings.c"
        "wifi_manager.c"
    EMBED_TXTFILES
        "../certs/github-ota-root-bundle.pem"
        "../certs/octopus-amazon-root-ca-1.pem"
    INCLUDE_DIRS
        "."
    REQUIRES
        app_update
        esp_event
        esp_netif
        esp_https_ota
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_spi
        esp_http_client
        esp_wifi
        freertos
        cjson
        lwip
        mbedtls
        nvs_flash
)
